# nrf51822_advent_of_code_2022_rust

./: .gdbinit  Cargo.toml  Embed.toml  README.md  build.rs  openocd.cfg
.cargo/: config
src/: main.rs
src/data_structures/: bitarray.rs  mod.rs  ringbuffer.rs
src/solutions/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs
